# GGQuantStrategy

./: .gitignore  README.md  pyproject.toml
Robinhood/: equity.py  strategy.py  utils.py
tests/Robinhood/: test_utils.py
