[tool.poetry]
name = "ggquantstrategy"
version = "0.1.0"
description = ""
authors = ["Shengyun Gao <gordongao1210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
black = "^23.9.1"
datetime = "^5.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
